# sync-hire

./: .gitignore  CLAUDE.md  README.md  deploy.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/agent/: .env.example  .gitignore  CHANGES.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  config.py  deploy-cloud-run.sh  interview_instructions.md  main.py  mypy.ini  package.json  pyproject.toml  pyrightconfig.json  start.sh
apps/agent/agents/: __init__.py  agent_manager.py  interview_agent.py
apps/agent/patches/: README.md
apps/agent/processors/: README.md  __init__.py  interview_completion_processor.py
apps/web/: .firebaserc  FIREBASE_DEPLOYMENT.md  deploy.sh  firebase.json  next.config.ts  package-lock.json  package.json  setup-secrets.sh
apps/web/src/: index.css
data/sample-jds/: nexustech-fullstack-developer.md
docs/: ARCHITECTURE.md  VISION_AGENTS_INTEGRATION.md  synchire_prd.md
openspec/: project.md
openspec/changes/add-cv-upload-job-matching/: proposal.md
openspec/changes/enhance-demo-results-flow/: proposal.md  tasks.md
openspec/changes/enhance-extracted-data-screen/: proposal.md  tasks.md
openspec/changes/initialize-synchire-monorepo/: design.md  tasks.md
openspec/changes/separate-completed-interviews/: proposal.md  tasks.md
openspec/specs/ai-integration/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/candidate-job-matching/: spec.md
openspec/specs/database/: spec.md
openspec/specs/development-environment/: spec.md
openspec/specs/file-storage/: spec.md
openspec/specs/interview-history/: spec.md
openspec/specs/job-management/: spec.md
openspec/specs/job-matching/: spec.md
openspec/specs/monorepo-foundation/: spec.md
(+80 files in other folders)
